fix: splash spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,12 +50,12 @@ h1 {
 
 .heading-splash {
   background-color: #ffd333;
-  margin: 2rem;
+  margin: 2rem 0;
   color: #17201c;
   padding: 5px 20px;
   transform: skew(-14deg);
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 24px;
   font-weight: bold;
 }
@@ -183,6 +183,9 @@ nav a:hover {
   }
   .hill-event {
     width: 400px;
+  }
+  .heading-splash {
+    font-size: 18px;
   }
 }
 @media only screen and (min-width: 1024px) {
